feat: added podcast index API handling to our trpc and backend

--- a/apps/fastify/.env.example
+++ b/apps/fastify/.env.example
@@ -15,3 +15,9 @@ RATE_LIMIT_WINDOW=600000
 
 # CORS (comma-separated for multiple origins)
 CORS_ORIGIN=http://localhost:3035,http://localhost:5173,http://localhost:3046/
+
+# Podcast Index
+PI_AUTH_KEY='your_api_key'
+PI_SECRET_KEY='your_api_secret'
+PI_USER_AGENT='Your_app_name'
+PI_API_ENDPOINT='https://api.podcastindex.org/api/1.0'
