--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-popover": "catalog:",
     "@radix-ui/react-radio-group": "catalog:",
     "@radix-ui/react-scroll-area": "catalog:",
+    "@radix-ui/react-select": "catalog:",
     "@radix-ui/react-separator": "catalog:",
     "@radix-ui/react-slot": "catalog:",
     "@radix-ui/react-use-controllable-state": "catalog:",
