--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-label": "catalog:",
     "@radix-ui/react-navigation-menu": "catalog:",
     "@radix-ui/react-popover": "catalog:",
+    "@radix-ui/react-progress": "catalog:",
     "@radix-ui/react-radio-group": "catalog:",
     "@radix-ui/react-scroll-area": "catalog:",
     "@radix-ui/react-select": "catalog:",
