--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-select": "catalog:",
     "@radix-ui/react-separator": "catalog:",
     "@radix-ui/react-slot": "catalog:",
+    "@radix-ui/react-tabs": "catalog:",
     "@radix-ui/react-use-controllable-state": "catalog:",
     "@tabler/icons-react": "catalog:",
     "@tanstack/react-form": "catalog:",
