--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -25,6 +25,7 @@ catalog:
   '@radix-ui/react-select': ^2.2.6
   '@radix-ui/react-separator': ^1.1.7
   '@radix-ui/react-slot': ^1.2.3
+  '@radix-ui/react-tabs': ^1.1.13
   '@radix-ui/react-use-controllable-state': ^1.2.2
   '@t3-oss/env-core': ^0.13.8
   '@tabler/icons-react': ^3.35.0
