--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -3,16 +3,16 @@
   "extends": ["//"],
   "tasks": {
     "build": {
-      "env": ["PUBLIC_*", "PROD", "DEV", "MODE"],
+      "env": ["PUBLIC_*", "PROD", "DEV", "MODE", "BASE_URL"],
       "inputs": ["$TURBO_DEFAULT$", ".env"]
     },
     "dev": {
-      "env": ["PUBLIC_*", "PROD", "DEV", "MODE"],
+      "env": ["PUBLIC_*", "PROD", "DEV", "MODE", "BASE_URL"],
       "inputs": ["$TURBO_DEFAULT$", ".env"],
       "persistent": true
     },
     "start": {
-      "env": ["PUBLIC_*", "PROD", "DEV", "MODE"],
+      "env": ["PUBLIC_*", "PROD", "DEV", "MODE", "BASE_URL"],
       "persistent": true
     }
   }
